// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChopLogicTextInput component > should render the input correctly 1`] = `
<DocumentFragment>
  <div
    class="_container_aea932"
  >
    <div
      class="_wrapper_aea932"
    >
      <label
        class="_label_ef7494 _label_aea932"
        for="test-input-id"
      >
        <span
          class="_text_ef7494"
        >
          Test Input:
        </span>
      </label>
      <input
        aria-errormessage="test-input-id_error"
        aria-invalid="false"
        class="_input_aea932"
        id="test-input-id"
        name="testInput"
        placeholder="Type here..."
        type="text"
        value=""
      />
    </div>
    <span
      class="_message_a256d5 _error_aea932"
      id="test-input-id_error"
    >
      Invalid input
    </span>
  </div>
</DocumentFragment>
`;

exports[`ChopLogicTextInput component > should render the required input correctly 1`] = `
<DocumentFragment>
  <div
    class="_container_aea932"
  >
    <div
      class="_wrapper_aea932"
    >
      <label
        class="_label_ef7494 _label_aea932"
        for="test-input-id"
      >
        <span
          class="_text_ef7494"
        >
          Test Input:
        </span>
        <abbr
          class="_required_ef7494"
          title="required"
        >
          *
        </abbr>
      </label>
      <input
        aria-errormessage="test-input-id_error"
        aria-invalid="false"
        class="_input_aea932"
        id="test-input-id"
        name="testInput"
        placeholder="Type here..."
        required=""
        type="text"
        value=""
      />
    </div>
    <span
      class="_message_a256d5 _error_aea932"
      id="test-input-id_error"
    >
      Invalid input
    </span>
  </div>
</DocumentFragment>
`;
